# stock_chose

./: .gitignore  Dockerfile  README.md  aksahre_test.py  backtrader_chose.py  bot-get-chat-id.py  bot.py  proxies.json  proxy_test.py  pyproject.toml  requirements.txt  stock_chose.py  stock_data.db  stock_rule3.py  stock_show.py  sync_history.sh  test_evaluator.py  test_registry.py
.devcontainer/: devcontainer.json  post-create-command.sh
bak/: backtrader_chose.py  bot.py  chose_api.py  data_spider_demo.py  rule_base.py  show_demo.py  stock_chose.py  stock_data_spider.py  stock_rule1.py  stock_rule2.py  stock_rule3.py
data/: borad_互联网服务_2024_12_02  borad_食品饮料_2024_12_02  stock_100亿2024_11_25.csv  stock_hfq_000006.csv  stock_hfq_000009.csv  stock_hfq_000012.csv  stock_hfq_000021.csv  stock_hfq_000027.csv  stock_hfq_000028.csv  stock_hfq_000029.csv  stock_hfq_000031.csv  stock_hfq_000032.csv  stock_hfq_000034.csv  stock_hfq_000035.csv  stock_hfq_000039.csv  stock_hfq_000050.csv  stock_hfq_000058.csv  stock_hfq_000060.csv  stock_hfq_000061.csv  stock_hfq_000062.csv  stock_hfq_000069.csv  stock_hfq_000088.csv  stock_hfq_000089.csv  stock_hfq_000099.csv  stock_hfq_000155.csv  stock_hfq_000156.csv  stock_hfq_000157.csv  stock_hfq_000158.csv  stock_hfq_000400.csv  stock_hfq_000402.csv  stock_hfq_000403.csv  stock_hfq_000408.csv  stock_hfq_000410.csv  stock_hfq_000415.csv  stock_hfq_000422.csv  stock_hfq_000423.csv  stock_hfq_000426.csv  stock_hfq_000429.csv  stock_hfq_000503.csv  stock_hfq_000513.csv  (+1126 more)
docs/: Task.md  Task_Template.md
mcp/: notion_mcp_service.py
(+5897 files in other folders)
